src/objects/ParticipantAcknowledgement__c.object
<CustomObject>
    <description>Used by DTW Project Incentive as a placeholder for a Digital Acknowledgement as well as for participants , refer to User Story 00864 and related work items.</description>
    <fields>
        <fullName>Acknowledged__c</fullName>
        <label>I Accept</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AcknowledgementURL__c</fullName>
        <formula>Hyperlink(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;Id,&quot;Participant Acknowledgement&quot;)</formula>
        <label>Acknowledgement URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgeRange__c</fullName>
        <formula>IF( TEXT(ResponseDate__c) =&quot;&quot;,
   IF( TODAY() - Sent_Date__c &lt; 6, &quot;d. 0 - 5 days&quot;,
      IF( TODAY() - Sent_Date__c &lt; 11, &quot;c. 6 - 10 days&quot;,
         IF( TODAY() - Sent_Date__c &lt; 16, &quot;b. 11 - 15 days&quot;,&quot;a. 21 days+&quot;)
)),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver1Email__c</fullName>
        <label>Approver 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Approver1__c</fullName>
        <formula>ParticipantID__r.EnrollmentPlan__r.Approver1__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientName__c</fullName>
        <formula>ParticipantID__r.EnrollmentPlan__r.IncentiveProject__r.CustomerName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Enrollment_Application__r.CustomerName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTWFixedPricePlanEmployeeGuideURL__c</fullName>
        <formula>&quot;http://my.aecomnet.com/deployedfiles/Intranet/About/Global%20Project%20Excellence/Documents/DTW-Fixed%20Price%20Employee%20Guide%20rev%20Aug2015%20Final.pdf&quot;</formula>
        <label>DTW Fixed Price Plan Employee Guide URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTWFixedPricePlanEmployeeGuide__c</fullName>
        <formula>HYPERLINK(DTWFixedPricePlanEmployeeGuideURL__c, &quot;DTW Fixed Price Plan Employee Guide&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DTW Fixed Price Plan Employee Guide</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTWTMPlanEmployeeGuideURL__c</fullName>
        <formula>&quot;http://my.aecomnet.com/deployedfiles/Intranet/About/Global%20Project%20Excellence/Documents/DTW-T&amp;M%20Employee%20Guide%204Aug2015%20Final.pdf&quot;</formula>
        <label>DTW T&amp;M Plan Employee Guide URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTWTMPlanEmployeeGuide__c</fullName>
        <formula>HYPERLINK(DTWTMPlanEmployeeGuideURL__c, &quot;DTW T&amp;M Plan Employee Guide&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DTW T&amp;M Plan Employee Guide</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTWWebpageURL__c</fullName>
        <formula>&quot;http://my.aecomnet.com/Intranet/About/Delivery+Excellence/Design+and+Consulting+Services?appInstanceName=intranet&amp;vgnextrefresh=1&quot;</formula>
        <label>DTWWebpageURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTWWebpage__c</fullName>
        <formula>HYPERLINK(DTWWebpageURL__c, &quot;Deliver to Win&quot; )</formula>
        <label>DTWWebpage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeclinedReasonOther__c</fullName>
        <label>Declined Reason Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Declined_Reason__c</fullName>
        <label>Declined Reason</label>
        <picklist>
            <picklistValues>
                <fullName>I don&apos;t believe this project can earn an award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I don’t believe I can impact project results to earn an award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I do not feel this project should be eligible for an incentive award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I feel this program should include the full project team, not just a select group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I feel another employee(s) should be enrolled in my place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I am not actively working on this project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EnrollmentAppName__c</fullName>
        <formula>ParticipantID__r.EnrollmentPlan__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EnrollmentAppName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentAppNameatSnapshot__c</fullName>
        <label>Enrollment App Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentApplicationID__c</fullName>
        <formula>ParticipantID__r.EnrollmentPlan__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EnrollmentApplicationID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentParticipantURL__c</fullName>
        <formula>HYPERLINK(&quot;https://aecom--ecosysdev.cs15.my.salesforce.com/&quot;&amp;ParticipantID__r.Id, &quot;Enrollment Participant&quot;)

/*HYPERLINK(&quot;https://test.salesforce.com/&quot;&amp;ParticipantID__r.Id, &quot;Enrollment Participant&quot; )*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrollment Participant URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentStatus__c</fullName>
        <formula>TEXT(ParticipantID__r.EnrollmentPlan__r.EnrollmentStatus__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrollment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrollment Application</label>
        <referenceTo>EnrollmentPlan__c</referenceTo>
        <relationshipLabel>Participant Acknowledgements</relationshipLabel>
        <relationshipName>Participant_Acknowledgements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncentiveProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incentive Project</label>
        <referenceTo>IncentiveProject__c</referenceTo>
        <relationshipLabel>Participant Acknowledgements</relationshipLabel>
        <relationshipName>Participant_Acknowledgements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Info__c</fullName>
        <description>I, EMPLOYEE NAME, agree to participate in the Deliver to Win Fixed Price Incentive Plan (“the Plan”).  I acknowledge that I have read and understand the terms of this letter, the attached Employee Guide, and the terms of the Plan. I acknowledge and understand that the Plan contains provisions under which awards can be delayed, reduced or forfeited.  I understand and agree that awards under the Plan are discretionary and do not affect or form part of my terms and conditions of employment nor are they considered to form part of my fixed pay.</description>
        <formula>/*&quot;By checking the box below I, &quot; &amp; ParticipantID__r.EmployeeName__r.FirstName &amp;&quot; &quot;&amp; ParticipantID__r.EmployeeName__r.LastName &amp;&quot;, do hereby acknowledge my enrollment into the incentive program for project &quot;&amp;  ParticipantID__r.EnrollmentPlan__r.ProjectID__c  &amp; &quot; &quot; &amp;  ParticipantID__r.IncentiveProjectName__c &amp;&quot;.&quot;*/



&quot;I,&quot;&amp;Owner:User.FirstName&amp;&quot; &quot;&amp;Owner:User.LastName&amp;&quot;, agree to participate in the Deliver to Win Fixed Price Incentive Plan (“the Plan”).  I acknowledge that I have read and understand the terms of the letter sent to me, the Employee Guide, and the terms of the Plan. I acknowledge and understand that the Plan contains provisions under which awards can be delayed, reduced or forfeited.  I understand and agree that awards under the Plan are discretionary and do not affect or form part of my terms and conditions of employment nor are they considered to form part of my fixed pay.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Participant_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NotificationFlag__c</fullName>
        <label>Notification Flag</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ParticipantEMailAddress__c</fullName>
        <formula>Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParticipantE-Mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParticipantID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant ID</label>
        <referenceTo>EnrollmentParticipant__c</referenceTo>
        <relationshipName>Acknowledgments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParticipantProjectEndDateSnapshot__c</fullName>
        <label>Participant End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ParticipantProjectStartDateSnapshot__c</fullName>
        <label>Participant Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PaymentDate__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlanType__c</fullName>
        <formula>ParticipantID__r.EnrollmentPlan__r.PlanType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PlanType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialPayout__c</fullName>
        <formula>ParticipantID__r.EstimatedPayout__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PotentialPayout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PotentialPayoutatSnapshot__c</fullName>
        <label>Potential Payout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectEndDate__c</fullName>
        <formula>ParticipantID__r.ProjectEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectEndDateatSnapshot__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectManagerEmail__c</fullName>
        <label>Project Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ProjectManager__c</fullName>
        <formula>ParticipantID__r.EnrollmentPlan__r.IncentiveProject__r.Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNameSnapshot__c</fullName>
        <label>Project Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <formula>ParticipantID__r.EnrollmentPlan__r.IncentiveProject__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <formula>ParticipantID__r.EnrollmentPlan__r.IncentiveProject__r.ProjectID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectStartDate__c</fullName>
        <formula>ParticipantID__r.ProjectStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectStartDateatSnapshot__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RegionEmail__c</fullName>
        <formula>IF( 
   BEGINS(ParticipantID__r.EnrollmentPlan__r.IncentiveProject__r.SuperGeography__c,&quot;Americas&quot;), &quot;AmericasDTWIncentivePlan@aecom.com&quot;,
   IF(
      BEGINS(ParticipantID__r.EnrollmentPlan__r.IncentiveProject__r.SuperGeography__c,&quot;EMEA&quot;), &quot;EMEADTWIncentivePlan@aecom.com&quot;,
      IF(
         BEGINS(ParticipantID__r.EnrollmentPlan__r.IncentiveProject__r.SuperGeography__c,&quot;APAC&quot;), &quot;APACDTWIncentivePlan@aecom.com&quot;,&quot;N/A&quot;)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplyTo__c</fullName>
        <description>Translates the Incentive Project&apos;s Super Geography into the appropriate Reply To e-mail address, used in e-mail alerts</description>
        <formula>CASE(
       ParticipantID__r.EnrollmentPlan__r.IncentiveProject__r.SuperGeography__c  , 
                     &quot;Americas&quot;, &quot;americasdtwincentiveplan@aecom.com&quot;, 
                     &quot;EMEA&quot;, &quot;emeadtwincentiveplan@aecom.com&quot;,
                     &quot;EMEAI&quot;, &quot;emeadtwincentiveplan@aecom.com&quot;,
                     &quot;APAC&quot;, &quot;apacdtwincentiveplan@aecom.com&quot;, &quot;&quot;
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reply To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseDate__c</fullName>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TM1AcknowledgementKey__c</fullName>
        <externalId>true</externalId>
        <label>TM1 Acknowledgement Key</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TargetAtSnapshot__c</fullName>
        <label>Target %</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <formula>ParticipantID__r.TargetIncentivePoolAllocated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>eSignatureArt__c</fullName>
        <formula>IMAGE(&quot;/resource/1443021741000/INC_SignHereUP&quot;,&quot;eSig&quot;, 80,80)</formula>
        <label>*</label>
        <type>Text</type>
    </fields>
    <label>Participant Acknowledgement</label>
    <listViews>
        <fullName>All_Acknowledgements_CK</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Geography__c</columns>
        <columns>Sent_Date__c</columns>
        <columns>ResponseDate__c</columns>
        <columns>AgeRange__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>EnrollmentAppName__c</columns>
        <columns>ProjectNameSnapshot__c</columns>
        <columns>EnrollmentApplicationID__c</columns>
        <columns>ParticipantID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NotificationFlag__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Acknowledgements - CK</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Acknowledgements_w_Projects</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Geography__c</columns>
        <columns>Sent_Date__c</columns>
        <columns>ResponseDate__c</columns>
        <columns>AgeRange__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>EnrollmentAppName__c</columns>
        <columns>ProjectNameSnapshot__c</columns>
        <columns>EnrollmentApplicationID__c</columns>
        <columns>ParticipantID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Geography__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ParticipantAcknowledgement__c.Sent</value>
        </filters>
        <label>All Acknowledgements w/Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_My_Acknowledgements</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Sent_Date__c</columns>
        <columns>ResponseDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ProjectName__c</columns>
        <columns>ProjectNumber__c</columns>
        <columns>ProjectNameSnapshot__c</columns>
        <columns>Acknowledged__c</columns>
        <filterScope>Mine</filterScope>
        <label>All My Acknowledgements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DTW_Corp_Admin_ParticapantEnrollments</fullName>
        <filterScope>Queue</filterScope>
        <label>DTW Corp Admin</label>
        <queue>DTW_Corp_Admin</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Participant Acknowledgement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Acknowledgements</pluralLabel>
    <recordTypes>
        <fullName>Received</fullName>
        <active>true</active>
        <label>Received</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sent</fullName>
        <active>true</active>
        <label>Sent</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Decline_Reason_Other_Needs_Detail</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
     ISPICKVAL(Declined_Reason__c , &quot;Other&quot;),
     ISBLANK( DeclinedReasonOther__c )
)</errorConditionFormula>
        <errorDisplayField>DeclinedReasonOther__c</errorDisplayField>
        <errorMessage>Please provide more detailed information</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Declined_Needs_Reason</fullName>
        <active>true</active>
        <description>If Status Declined, Need Reason Why</description>
        <errorConditionFormula>AND(
    ISPICKVAL( Acknowledged__c , &apos;No&apos;),
    ISBLANK(TEXT( Declined_Reason__c ))
    )</errorConditionFormula>
        <errorDisplayField>Declined_Reason__c</errorDisplayField>
        <errorMessage>If Declining Participation, Please Give Reason Why</errorMessage>
    </validationRules>
</CustomObject>